2008-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Implement AM_MAINTAINER_MODE([DEFAULT-MODE]).
	* m4/maintainer.m4 (AM_MAINTAINER_MODE): Allow for an optional
	first argument of `enable' or `disable', setting the default.
	* doc/automake.texi (Optional, maintainer-mode): Document.
	* tests/mmode.test: New test.
	* tests/Makefile.am: Adjust.
	* NEWS: Update.
	Suggestion by Vincent Lefevre.

2008-08-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Copyright year updates.
	* lib/am/header-vars.am: Update copyright years.
	* lib/am/remake-hdr.am: Likewise.
	* lib/am/tags.am: Likewise.

2008-08-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* THANKS: Use Cyrillic name instead of ASCII transcription.

2008-08-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix rebuilding of removed subdir/Makefile.in files.
	* lib/am/configure.am (%MAKEFILE-IN%) [?!TOPDIR_P?]: If
	subdir/Makefile.in was removed, am--refresh would not update
	it.  Fix up for it by running the per-directory rebuild rule.
	* tests/remake6.test, tests/remake7.test: New tests.
	* tests/Makefile.am: Adjust.
	* NEWS, THANKS: Update.
	Report and initial patch by Ilya N. Golubev.

2008-08-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/notrans.test: Use multiple man files of each type.

	Fix maintainer-check failures.
	* doc/automake.texi (Conditionals): Drop TAB.
	* tests/missing6.test: Use 'rm -f'.

2008-08-19  Reuben Thomas <rrt@sc3d.org>  (tiny patch)

	* doc/automake.texi (Flag Variables Ordering, Per-Object Flags):
	Fix grammaros.

2008-08-02  Karl Berry  <karl@freefriends.org>

	* lib/gnupload: Provide also a simple example.

2008-06-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Small doc fix.
	* doc/automake.texi (Public Macros): Close open paren.

2008-06-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Introduce macro $(am__mv) to facilitate 'libtool --dry-run'.
	* lib/am/depend.am (am__mv): New macro, set to 'mv -f'.
	* lib/am/depend2.am: Use throughout to move the temporary