@@ -31,9 +31,6 @@ mydir=$(prefix)/my
 my_PYTHON = one.py sub/base.py
 nobase_my_PYTHON = two.py sub/nobase.py
 
-one.py sub/base.py two.py sub/nobase.py:
-	echo 'def one(): return 1' >$@
-
 test-install-data: install-data
 	test   -f inst/my/one.py
 	test   -f inst/my/one.pyc
@@ -48,6 +45,11 @@ test-install-data: install-data
 END
 
 mkdir sub
+
+for file in one.py sub/base.py two.py sub/nobase.py
+do
+  echo 'def one(): return 1' >$file
+done
 
 $ACLOCAL
 $AUTOCONF
