@@ -1,3 +1,11 @@
+2008-09-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix nobase-python.test for BSD make.
+	* tests/nobase-python.test: Listing a dependency to be found
+	via VPATH search explicitly, without the path, as a target,
+	will turn off VPATH search for FreeBSD make.  So move the
+	creation of the files outside of the Makefile.
+
 2008-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Implement AM_MAINTAINER_MODE([DEFAULT-MODE]).
